data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_760.wast
;; 1. **Test Description**:    Place a `br_table` instruction immediately after a sequence of `nop` instructions where the index exceeds the number of targets. The test checks for proper error handling when encountering an out-of-bounds index.      **Specific Constraint**: Ensures `nop` does not influence the error checking for the out-of-bounds index.      **Edge Case**: Out-of-bounds index in `br_table`.

(assert_invalid
  (module
    (func $br_table_after_nop (nop)(nop)(nop)(br_table 0 1 2 3 (i32.const 4)))
  )
  "out of bounds index"
)